Fix: aligns edge of exit map mode button with map controls

--- a/src/features/common/Layout/Navbar/Navbar.scss
+++ b/src/features/common/Layout/Navbar/Navbar.scss
@@ -26,7 +26,7 @@
   }
   @include xsPhoneView {
     border-radius: 12px;
-    width: calc(100% - 24px);
+    width: calc(100% - 20px);
     top: 16px;
     padding: 8.5px;
     border: 1px solid rgba(211, 211, 211, 0.5);
