--- a/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
+++ b/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
@@ -13,7 +13,7 @@
   align-items: center;
   gap: 34px;
   top: 114px;
-  right: 14px;
+  right: 10px;
   z-index: 2px;
 
   > .exitMapModeButton {
